--- a/node21.html
+++ b/node21.html
@@ -128,66 +128,72 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <LI><A NAME="tex2html995"
   HREF="node23.html#SECTION04320020000000000000">arithmetics.pegjs</A>
 <LI><A NAME="tex2html996"
+  HREF="node23.html#SECTION04320030000000000000">main.js</A>
+<LI><A NAME="tex2html997"
+  HREF="node23.html#SECTION04320040000000000000">Rakefile</A>
+<LI><A NAME="tex2html998"
+  HREF="node23.html#SECTION04320050000000000000">Compilación</A>
+<LI><A NAME="tex2html999"
   HREF="node23.html#SECTION04321000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html997"
+<LI><A NAME="tex2html1000"
   HREF="node24.html">Eliminación de la Recursividad por la Izquierda</A>
 <UL>
-<LI><A NAME="tex2html998"
+<LI><A NAME="tex2html1001"
   HREF="node24.html#SECTION04331000000000000000">Eliminación de la Recursividad por la izquierda Respetando el Orden de 
 Ejecución de las Acciones Semánticas</A>
-<LI><A NAME="tex2html999"
+<LI><A NAME="tex2html1002"
   HREF="node24.html#SECTION04332000000000000000">Eliminando la Recursividad por la Izquierda en la Calculadora</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1000"
+<LI><A NAME="tex2html1003"
   HREF="node25.html">Eliminación de la Recursividad por la Izquierda y Atributos Heredados</A>
 <UL>
-<LI><A NAME="tex2html1001"
+<LI><A NAME="tex2html1004"
   HREF="node25.html#SECTION04341000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
-<LI><A NAME="tex2html1002"
+<LI><A NAME="tex2html1005"
   HREF="node25.html#SECTION04342000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
-<LI><A NAME="tex2html1003"
+<LI><A NAME="tex2html1006"
   HREF="node25.html#SECTION04343000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1004"
-  HREF="node26.html">Asociando un else con su if mas cercano</A>
-<LI><A NAME="tex2html1005"
-  HREF="node27.html">Comentarios Anidados</A>
-<LI><A NAME="tex2html1006"
-  HREF="node28.html">Un Lenguaje Dependiente del Contexto</A>
 <LI><A NAME="tex2html1007"
+  HREF="node26.html">Asociando un else con su if mas cercano</A>
+<LI><A NAME="tex2html1008"
+  HREF="node27.html">Comentarios Anidados</A>
+<LI><A NAME="tex2html1009"
+  HREF="node28.html">Un Lenguaje Dependiente del Contexto</A>
+<LI><A NAME="tex2html1010"
   HREF="node29.html">PegJS en los Browser</A>
 <UL>
-<LI><A NAME="tex2html1008"
-  HREF="node29.html#SECTION04380010000000000000">La opción -e de pegjs</A>
-<LI><A NAME="tex2html1009"
-  HREF="node29.html#SECTION04380020000000000000">arithmetic.pegjs</A>
-<LI><A NAME="tex2html1010"
-  HREF="node29.html#SECTION04380030000000000000">calculator.html</A>
 <LI><A NAME="tex2html1011"
+  HREF="node29.html#SECTION04380010000000000000">La opción -e de pegjs</A>
+<LI><A NAME="tex2html1012"
+  HREF="node29.html#SECTION04380020000000000000">arithmetic.pegjs</A>
+<LI><A NAME="tex2html1013"
+  HREF="node29.html#SECTION04380030000000000000">calculator.html</A>
+<LI><A NAME="tex2html1014"
   HREF="node29.html#SECTION04380040000000000000">calculator.js</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1012"
+<LI><A NAME="tex2html1015"
   HREF="node30.html">Usando Pegjs con CoffeeScript</A>
 <UL>
-<LI><A NAME="tex2html1013"
+<LI><A NAME="tex2html1016"
   HREF="node30.html#SECTION04390010000000000000">Instalación de pegjs-coffee-plugin</A>
-<LI><A NAME="tex2html1014"
+<LI><A NAME="tex2html1017"
   HREF="node30.html#SECTION04390020000000000000">Ejemplo Sencillo</A>
-<LI><A NAME="tex2html1015"
+<LI><A NAME="tex2html1018"
   HREF="node30.html#SECTION04390030000000000000">Véase También</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1016"
+<LI><A NAME="tex2html1019"
   HREF="node31.html">Práctica: Ambiguedad en C++</A>
-<LI><A NAME="tex2html1017"
+<LI><A NAME="tex2html1020"
   HREF="node32.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 <UL>
-<LI><A NAME="tex2html1018"
+<LI><A NAME="tex2html1021"
   HREF="node32.html#SECTION043110010000000000000">Recursos</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
