--- a/node23.html
+++ b/node23.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1045"
+<A NAME="tex2html1048"
   HREF="node24.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1039"
+<A NAME="tex2html1042"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1033"
+<A NAME="tex2html1036"
   HREF="node22.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1041"
+<A NAME="tex2html1044"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1043"
+<A NAME="tex2html1046"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1046"
+<B> Sig:</B> <A NAME="tex2html1049"
   HREF="node24.html">Eliminación de la Recursividad</A>
-<B>Sup:</B> <A NAME="tex2html1040"
+<B>Sup:</B> <A NAME="tex2html1043"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1034"
+<B> Ant:</B> <A NAME="tex2html1037"
   HREF="node22.html">Referencias y Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html1041"
+<A NAME="tex2html1044"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1043"
+<A NAME="tex2html1046"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,14 +115,20 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1047"
+<LI><A NAME="tex2html1050"
   HREF="node23.html#SECTION04320010000000000000">Donde</A>
-<LI><A NAME="tex2html1048"
+<LI><A NAME="tex2html1051"
   HREF="node23.html#SECTION04320020000000000000">arithmetics.pegjs</A>
+<LI><A NAME="tex2html1052"
+  HREF="node23.html#SECTION04320030000000000000">main.js</A>
+<LI><A NAME="tex2html1053"
+  HREF="node23.html#SECTION04320040000000000000">Rakefile</A>
+<LI><A NAME="tex2html1054"
+  HREF="node23.html#SECTION04320050000000000000">Compilación</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html1049"
+<LI><A NAME="tex2html1055"
   HREF="node23.html#SECTION04321000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -199,12 +205,26 @@ NUMBER = _ digits:$[0-9]+ _ { return parseInt(digits, 10); }
 </PRE>
 
 <P>
+
+<H4><A NAME="SECTION04320030000000000000">
+main.js</A>
+</H4>
+  
+
+<P>
 <PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat main.js 
 var PEG = require("./arithmetics.js");
 var r = PEG.parse("(2+9-1)/2");
 console.log(r);
 </PRE>
+
+<P>
+
+<H4><A NAME="SECTION04320040000000000000">
+Rakefile</A>
+</H4>
+  
 
 <P>
 <PRE>
@@ -224,6 +244,12 @@ end
 </PRE>
 
 <P>
+
+<H4><A NAME="SECTION04320050000000000000">
+Compilación</A>
+</H4>
+  
+
 <PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ rake
 ../bin/pegjs arithmetics.pegjs
@@ -240,7 +266,7 @@ Asociación Incorrecta para la Resta y la División</A>
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="3512"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="3527"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -261,7 +287,7 @@ una regla de producción de la forma <!-- MATH
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-Cuando la gramática es <A NAME="3514"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="3529"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
@@ -307,19 +333,19 @@ console.log(r);
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1045"
+<A NAME="tex2html1048"
   HREF="node24.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1039"
+<A NAME="tex2html1042"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1033"
+<A NAME="tex2html1036"
   HREF="node22.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1041"
+<A NAME="tex2html1044"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1043"
+<A NAME="tex2html1046"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -371,11 +397,11 @@ console.log(r);
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1046"
+<B> Sig:</B> <A NAME="tex2html1049"
   HREF="node24.html">Eliminación de la Recursividad</A>
-<B>Sup:</B> <A NAME="tex2html1040"
+<B>Sup:</B> <A NAME="tex2html1043"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1034"
+<B> Ant:</B> <A NAME="tex2html1037"
   HREF="node22.html">Referencias y Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
