--- a/node21.html
+++ b/node21.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html990"
+<A NAME="tex2html993"
   HREF="node22.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html984"
+<A NAME="tex2html987"
   HREF="node6.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html978"
+<A NAME="tex2html981"
   HREF="node20.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html986"
+<A NAME="tex2html989"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html988"
+<A NAME="tex2html991"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html991"
-  HREF="node22.html">Referencias y Documentación</A>
-<B>Sup:</B> <A NAME="tex2html985"
+<B> Sig:</B> <A NAME="tex2html994"
+  HREF="node22.html">Instroducción</A>
+<B>Sup:</B> <A NAME="tex2html988"
   HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
-<B> Ant:</B> <A NAME="tex2html979"
+<B> Ant:</B> <A NAME="tex2html982"
   HREF="node20.html">Análisis Top Down Usando</A>
 <B> Con:</B> 
-<A NAME="tex2html986"
+<A NAME="tex2html989"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html988"
+<A NAME="tex2html991"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -118,100 +118,105 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html992"
-  HREF="node22.html">Referencias y Documentación</A>
-<LI><A NAME="tex2html993"
+<LI><A NAME="tex2html995"
+  HREF="node22.html">Instroducción</A>
+<UL>
+<LI><A NAME="tex2html996"
+  HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
+</UL>
+<BR>
+<LI><A NAME="tex2html997"
   HREF="node23.html">Un Ejemplo Sencillo</A>
 <UL>
-<LI><A NAME="tex2html994"
-  HREF="node23.html#SECTION04320010000000000000">Donde</A>
-<LI><A NAME="tex2html995"
-  HREF="node23.html#SECTION04320020000000000000">arithmetics.pegjs</A>
-<LI><A NAME="tex2html996"
-  HREF="node23.html#SECTION04320030000000000000">main.js</A>
-<LI><A NAME="tex2html997"
-  HREF="node23.html#SECTION04320040000000000000">Rakefile</A>
 <LI><A NAME="tex2html998"
-  HREF="node23.html#SECTION04320050000000000000">Compilación</A>
+  HREF="node23.html#SECTION04320010000000000000">Donde</A>
 <LI><A NAME="tex2html999"
+  HREF="node23.html#SECTION04320020000000000000">arithmetics.pegjs</A>
+<LI><A NAME="tex2html1000"
+  HREF="node23.html#SECTION04320030000000000000">main.js</A>
+<LI><A NAME="tex2html1001"
+  HREF="node23.html#SECTION04320040000000000000">Rakefile</A>
+<LI><A NAME="tex2html1002"
+  HREF="node23.html#SECTION04320050000000000000">Compilación</A>
+<LI><A NAME="tex2html1003"
   HREF="node23.html#SECTION04321000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1000"
+<LI><A NAME="tex2html1004"
   HREF="node24.html">Eliminación de la Recursividad por la Izquierda</A>
 <UL>
-<LI><A NAME="tex2html1001"
+<LI><A NAME="tex2html1005"
   HREF="node24.html#SECTION04331000000000000000">Eliminación de la Recursividad por la izquierda Respetando el Orden de 
 Ejecución de las Acciones Semánticas</A>
-<LI><A NAME="tex2html1002"
+<LI><A NAME="tex2html1006"
   HREF="node24.html#SECTION04332000000000000000">Eliminando la Recursividad por la Izquierda en la Calculadora</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1003"
+<LI><A NAME="tex2html1007"
   HREF="node25.html">Eliminación de la Recursividad por la Izquierda y Atributos Heredados</A>
 <UL>
-<LI><A NAME="tex2html1004"
+<LI><A NAME="tex2html1008"
   HREF="node25.html#SECTION04341000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
-<LI><A NAME="tex2html1005"
+<LI><A NAME="tex2html1009"
   HREF="node25.html#SECTION04342000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
-<LI><A NAME="tex2html1006"
+<LI><A NAME="tex2html1010"
   HREF="node25.html#SECTION04343000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1007"
+<LI><A NAME="tex2html1011"
   HREF="node26.html">Asociando un else con su if mas cercano</A>
-<LI><A NAME="tex2html1008"
+<LI><A NAME="tex2html1012"
   HREF="node27.html">Comentarios Anidados</A>
-<LI><A NAME="tex2html1009"
+<LI><A NAME="tex2html1013"
   HREF="node28.html">Un Lenguaje Dependiente del Contexto</A>
-<LI><A NAME="tex2html1010"
+<LI><A NAME="tex2html1014"
   HREF="node29.html">PegJS en los Browser</A>
 <UL>
-<LI><A NAME="tex2html1011"
+<LI><A NAME="tex2html1015"
   HREF="node29.html#SECTION04380010000000000000">La opción -e de pegjs</A>
-<LI><A NAME="tex2html1012"
+<LI><A NAME="tex2html1016"
   HREF="node29.html#SECTION04380020000000000000">arithmetic.pegjs</A>
-<LI><A NAME="tex2html1013"
+<LI><A NAME="tex2html1017"
   HREF="node29.html#SECTION04380030000000000000">calculator.html</A>
-<LI><A NAME="tex2html1014"
+<LI><A NAME="tex2html1018"
   HREF="node29.html#SECTION04380040000000000000">calculator.js</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1015"
+<LI><A NAME="tex2html1019"
   HREF="node30.html">Usando Pegjs con CoffeeScript</A>
 <UL>
-<LI><A NAME="tex2html1016"
+<LI><A NAME="tex2html1020"
   HREF="node30.html#SECTION04390010000000000000">Instalación de pegjs-coffee-plugin</A>
-<LI><A NAME="tex2html1017"
+<LI><A NAME="tex2html1021"
   HREF="node30.html#SECTION04390020000000000000">Ejemplo Sencillo</A>
-<LI><A NAME="tex2html1018"
+<LI><A NAME="tex2html1022"
   HREF="node30.html#SECTION04390030000000000000">Véase También</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1019"
+<LI><A NAME="tex2html1023"
   HREF="node31.html">Práctica: Ambiguedad en C++</A>
-<LI><A NAME="tex2html1020"
+<LI><A NAME="tex2html1024"
   HREF="node32.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 <UL>
-<LI><A NAME="tex2html1021"
+<LI><A NAME="tex2html1025"
   HREF="node32.html#SECTION043110010000000000000">Recursos</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html990"
+<A NAME="tex2html993"
   HREF="node22.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html984"
+<A NAME="tex2html987"
   HREF="node6.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html978"
+<A NAME="tex2html981"
   HREF="node20.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html986"
+<A NAME="tex2html989"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html988"
+<A NAME="tex2html991"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -263,11 +268,11 @@ Ejecución de las Acciones Semánticas</A>
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html991"
-  HREF="node22.html">Referencias y Documentación</A>
-<B>Sup:</B> <A NAME="tex2html985"
+<B> Sig:</B> <A NAME="tex2html994"
+  HREF="node22.html">Instroducción</A>
+<B>Sup:</B> <A NAME="tex2html988"
   HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
-<B> Ant:</B> <A NAME="tex2html979"
+<B> Ant:</B> <A NAME="tex2html982"
   HREF="node20.html">Análisis Top Down Usando</A>
 </DIV>
 <!--End of Navigation Panel-->
