--- a/node22.html
+++ b/node22.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Referencias y Documentación</TITLE>
-<META NAME="description" CONTENT="Referencias y Documentación">
+<TITLE>Instroducción</TITLE>
+<META NAME="description" CONTENT="Instroducción">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1034"
+<A NAME="tex2html1038"
   HREF="node23.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1028"
+<A NAME="tex2html1032"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1022"
+<A NAME="tex2html1026"
   HREF="node21.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1030"
+<A NAME="tex2html1034"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1032"
+<A NAME="tex2html1036"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,27 +92,64 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1035"
+<B> Sig:</B> <A NAME="tex2html1039"
   HREF="node23.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1029"
+<B>Sup:</B> <A NAME="tex2html1033"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1023"
+<B> Ant:</B> <A NAME="tex2html1027"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Con:</B> 
-<A NAME="tex2html1030"
+<A NAME="tex2html1034"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1032"
+<A NAME="tex2html1036"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
+<!--Table of Child-Links-->
+<A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
+
+<UL CLASS="ChildLinks">
+<LI><A NAME="tex2html1040"
+  HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
+</UL>
+<!--End of Table of Child-Links-->
+<HR>
 
 <H1><A NAME="SECTION04310000000000000000">
-Referencias y Documentación</A>
+Instroducción</A>
 </H1>
+
+<P>
+In computer science, a parsing expression grammar, or PEG, is a type of
+analytic formal grammar, i.e. it describes a formal language in terms
+of a set of rules for recognizing strings in the language.
+
+<P>
+The formalism was introduced by Bryan Ford in 2004 and is closely related to the family of top-down parsing languages introduced in the early 1970s. 
+
+<P>
+Syntactically, PEGs also look similar to
+context-free grammars (CFGs), but they have a different interpretation: 
+
+<P>
+
+<UL>
+<LI>the choice operator selects the first match in PEG, while it is ambiguous in CFG. 
+</LI>
+<LI>This is closer to how string recognition tends
+to be done in practice, e.g. by a recursive descent parser.
+</LI>
+</UL>
+
+<P>
+
+<H2><A NAME="SECTION04311000000000000000">
+Referencias y Documentación</A>
+</H2>
 
 <UL>
 <LI>Véase <A NAME="tex2html145"
@@ -147,19 +184,19 @@ Véanse [<A
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1034"
+<A NAME="tex2html1038"
   HREF="node23.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1028"
+<A NAME="tex2html1032"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1022"
+<A NAME="tex2html1026"
   HREF="node21.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1030"
+<A NAME="tex2html1034"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1032"
+<A NAME="tex2html1036"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -211,11 +248,11 @@ Véanse [<A
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1035"
+<B> Sig:</B> <A NAME="tex2html1039"
   HREF="node23.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1029"
+<B>Sup:</B> <A NAME="tex2html1033"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1023"
+<B> Ant:</B> <A NAME="tex2html1027"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 </DIV>
 <!--End of Navigation Panel-->
