--- a/node6.html
+++ b/node6.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html600"
+<A NAME="tex2html602"
   HREF="node7.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html594"
+<A NAME="tex2html596"
   HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html588"
+<A NAME="tex2html590"
   HREF="node5.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html596"
+<A NAME="tex2html598"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html598"
+<A NAME="tex2html600"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html601"
+<B> Sig:</B> <A NAME="tex2html603"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B>Sup:</B> <A NAME="tex2html595"
+<B>Sup:</B> <A NAME="tex2html597"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
-<B> Ant:</B> <A NAME="tex2html589"
+<B> Ant:</B> <A NAME="tex2html591"
   HREF="node5.html">Agradecimientos/Acknowledgments</A>
 <B> Con:</B> 
-<A NAME="tex2html596"
+<A NAME="tex2html598"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html598"
+<A NAME="tex2html600"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -120,219 +120,223 @@ PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html602"
+<LI><A NAME="tex2html604"
   HREF="node7.html">Expresiones Regulares y Análisis Léxico en JavaScript</A>
 <UL>
-<LI><A NAME="tex2html603"
-  HREF="node8.html">Mozilla Developer Network: Documentación</A>
-<LI><A NAME="tex2html604"
-  HREF="node9.html">Práctica: Conversor de Temperaturas</A>
 <LI><A NAME="tex2html605"
-  HREF="node10.html">Práctica: Comma Separated Values. CSV</A>
+  HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <LI><A NAME="tex2html606"
-  HREF="node11.html">Comentarios y Consejos</A>
+  HREF="node9.html">Práctica: Conversor de Temperaturas</A>
 <LI><A NAME="tex2html607"
-  HREF="node12.html">Ejercicios</A>
+  HREF="node10.html">Práctica: Comma Separated Values. CSV</A>
 <LI><A NAME="tex2html608"
-  HREF="node13.html">Práctica: Palabras Repetidas</A>
+  HREF="node11.html">Comentarios y Consejos</A>
 <LI><A NAME="tex2html609"
-  HREF="node14.html">Ejercicios</A>
+  HREF="node12.html">Ejercicios</A>
 <LI><A NAME="tex2html610"
-  HREF="node15.html">Ejercicios</A>
+  HREF="node13.html">Práctica: Palabras Repetidas</A>
 <LI><A NAME="tex2html611"
-  HREF="node16.html">Práctica: Ficheros INI</A>
+  HREF="node14.html">Ejercicios</A>
 <LI><A NAME="tex2html612"
+  HREF="node15.html">Ejercicios</A>
+<LI><A NAME="tex2html613"
+  HREF="node16.html">Práctica: Ficheros INI</A>
+<LI><A NAME="tex2html614"
   HREF="node17.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html613"
+<LI><A NAME="tex2html615"
   HREF="node18.html">Análisis Sintáctico Mediante Precedencia de Operadores en JavaScript</A>
 <UL>
-<LI><A NAME="tex2html614"
+<LI><A NAME="tex2html616"
   HREF="node19.html">Ejemplo Simple de Intérprete: Una Calculadora</A>
-<LI><A NAME="tex2html615"
+<LI><A NAME="tex2html617"
   HREF="node20.html">Análisis Top Down Usando Precedencia de Operadores</A>
 <UL>
-<LI><A NAME="tex2html616"
+<LI><A NAME="tex2html618"
   HREF="node20.html#SECTION04221000000000000000">Gramática de JavaScript</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html617"
+<LI><A NAME="tex2html619"
   HREF="node21.html">Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <UL>
-<LI><A NAME="tex2html618"
-  HREF="node22.html">Referencias y Documentación</A>
-<LI><A NAME="tex2html619"
+<LI><A NAME="tex2html620"
+  HREF="node22.html">Instroducción</A>
+<UL>
+<LI><A NAME="tex2html621"
+  HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
+</UL>
+<LI><A NAME="tex2html622"
   HREF="node23.html">Un Ejemplo Sencillo</A>
 <UL>
-<LI><A NAME="tex2html620"
+<LI><A NAME="tex2html623"
   HREF="node23.html#SECTION04321000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
-<LI><A NAME="tex2html621"
+<LI><A NAME="tex2html624"
   HREF="node24.html">Eliminación de la Recursividad por la Izquierda</A>
 <UL>
-<LI><A NAME="tex2html622"
+<LI><A NAME="tex2html625"
   HREF="node24.html#SECTION04331000000000000000">Eliminación de la Recursividad por la izquierda Respetando el Orden de 
 Ejecución de las Acciones Semánticas</A>
-<LI><A NAME="tex2html623"
+<LI><A NAME="tex2html626"
   HREF="node24.html#SECTION04332000000000000000">Eliminando la Recursividad por la Izquierda en la Calculadora</A>
 </UL>
-<LI><A NAME="tex2html624"
+<LI><A NAME="tex2html627"
   HREF="node25.html">Eliminación de la Recursividad por la Izquierda y Atributos Heredados</A>
 <UL>
-<LI><A NAME="tex2html625"
+<LI><A NAME="tex2html628"
   HREF="node25.html#SECTION04341000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
-<LI><A NAME="tex2html626"
+<LI><A NAME="tex2html629"
   HREF="node25.html#SECTION04342000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
-<LI><A NAME="tex2html627"
+<LI><A NAME="tex2html630"
   HREF="node25.html#SECTION04343000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
-<LI><A NAME="tex2html628"
-  HREF="node26.html">Asociando un else con su if mas cercano</A>
-<LI><A NAME="tex2html629"
-  HREF="node27.html">Comentarios Anidados</A>
-<LI><A NAME="tex2html630"
-  HREF="node28.html">Un Lenguaje Dependiente del Contexto</A>
 <LI><A NAME="tex2html631"
-  HREF="node29.html">PegJS en los Browser</A>
+  HREF="node26.html">Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html632"
-  HREF="node30.html">Usando Pegjs con CoffeeScript</A>
+  HREF="node27.html">Comentarios Anidados</A>
 <LI><A NAME="tex2html633"
-  HREF="node31.html">Práctica: Ambiguedad en C++</A>
+  HREF="node28.html">Un Lenguaje Dependiente del Contexto</A>
 <LI><A NAME="tex2html634"
+  HREF="node29.html">PegJS en los Browser</A>
+<LI><A NAME="tex2html635"
+  HREF="node30.html">Usando Pegjs con CoffeeScript</A>
+<LI><A NAME="tex2html636"
+  HREF="node31.html">Práctica: Ambiguedad en C++</A>
+<LI><A NAME="tex2html637"
   HREF="node32.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html635"
+<LI><A NAME="tex2html638"
   HREF="node33.html">Análisis Sintáctico Ascendente en JavaScript</A>
 <UL>
-<LI><A NAME="tex2html636"
+<LI><A NAME="tex2html639"
   HREF="node34.html">Conceptos Básicos para el Análisis Sintáctico</A>
 <UL>
-<LI><A NAME="tex2html637"
+<LI><A NAME="tex2html640"
   HREF="node34.html#SECTION04411000000000000000">Ejercicio</A>
 </UL>
-<LI><A NAME="tex2html638"
+<LI><A NAME="tex2html641"
   HREF="node35.html">Ejemplo Simple en Jison</A>
 <UL>
-<LI><A NAME="tex2html639"
+<LI><A NAME="tex2html642"
   HREF="node35.html#SECTION04421000000000000000">Véase También</A>
-<LI><A NAME="tex2html640"
+<LI><A NAME="tex2html643"
   HREF="node35.html#SECTION04422000000000000000">Práctica: Secuencia de Asignaciones Simples</A>
 </UL>
-<LI><A NAME="tex2html641"
+<LI><A NAME="tex2html644"
   HREF="node36.html">Ejemplo en Jison: Calculadora Simple</A>
 <UL>
-<LI><A NAME="tex2html642"
+<LI><A NAME="tex2html645"
   HREF="node36.html#SECTION04431000000000000000">Práctica: Calculadora con Listas de Expresiones y Variables</A>
 </UL>
-<LI><A NAME="tex2html643"
+<LI><A NAME="tex2html646"
   HREF="node37.html">Conceptos Básicos del Análisis LR</A>
-<LI><A NAME="tex2html644"
+<LI><A NAME="tex2html647"
   HREF="node38.html">Construcción de las Tablas para el Análisis SLR</A>
 <UL>
-<LI><A NAME="tex2html645"
+<LI><A NAME="tex2html648"
   HREF="node38.html#SECTION04451000000000000000">Los conjuntos de Primeros y Siguientes</A>
-<LI><A NAME="tex2html646"
+<LI><A NAME="tex2html649"
   HREF="node38.html#SECTION04452000000000000000">Construcción de las Tablas</A>
 </UL>
-<LI><A NAME="tex2html647"
-  HREF="node39.html">Práctica: Traducción de Infijo a Postfijo</A>
-<LI><A NAME="tex2html648"
-  HREF="node40.html">Práctica: Calculadora  con Funciones</A>
-<LI><A NAME="tex2html649"
-  HREF="node41.html">Práctica: Calculadora con Análisis de Ámbito</A>
 <LI><A NAME="tex2html650"
-  HREF="node42.html">Algoritmo de Análisis LR</A>
+  HREF="node39.html">Práctica: Traducción de Infijo a Postfijo</A>
 <LI><A NAME="tex2html651"
+  HREF="node40.html">Práctica: Calculadora  con Funciones</A>
+<LI><A NAME="tex2html652"
+  HREF="node41.html">Práctica: Calculadora con Análisis de Ámbito</A>
+<LI><A NAME="tex2html653"
+  HREF="node42.html">Algoritmo de Análisis LR</A>
+<LI><A NAME="tex2html654"
   HREF="node43.html">El módulo Generado por <TT>jison</TT></A>
 <UL>
-<LI><A NAME="tex2html652"
-  HREF="node43.html#SECTION044101000000000000000">Version</A>
-<LI><A NAME="tex2html653"
-  HREF="node43.html#SECTION044102000000000000000">Gramática Inicial</A>
-<LI><A NAME="tex2html654"
-  HREF="node43.html#SECTION044103000000000000000">Tablas</A>
 <LI><A NAME="tex2html655"
-  HREF="node43.html#SECTION044104000000000000000">Acciones Semánticas</A>
+  HREF="node43.html#SECTION044101000000000000000">Version</A>
 <LI><A NAME="tex2html656"
-  HREF="node43.html#SECTION044105000000000000000">Tabla de Acciones y GOTOs</A>
+  HREF="node43.html#SECTION044102000000000000000">Gramática Inicial</A>
 <LI><A NAME="tex2html657"
-  HREF="node43.html#SECTION044106000000000000000">defaultActions</A>
+  HREF="node43.html#SECTION044103000000000000000">Tablas</A>
 <LI><A NAME="tex2html658"
-  HREF="node43.html#SECTION044107000000000000000">Reducciones</A>
+  HREF="node43.html#SECTION044104000000000000000">Acciones Semánticas</A>
 <LI><A NAME="tex2html659"
-  HREF="node43.html#SECTION044108000000000000000">Desplazamientos/Shifts</A>
+  HREF="node43.html#SECTION044105000000000000000">Tabla de Acciones y GOTOs</A>
 <LI><A NAME="tex2html660"
-  HREF="node43.html#SECTION044109000000000000000">Manejo de Errores</A>
+  HREF="node43.html#SECTION044106000000000000000">defaultActions</A>
 <LI><A NAME="tex2html661"
-  HREF="node43.html#SECTION0441010000000000000000">Analizador Léxico</A>
+  HREF="node43.html#SECTION044107000000000000000">Reducciones</A>
 <LI><A NAME="tex2html662"
+  HREF="node43.html#SECTION044108000000000000000">Desplazamientos/Shifts</A>
+<LI><A NAME="tex2html663"
+  HREF="node43.html#SECTION044109000000000000000">Manejo de Errores</A>
+<LI><A NAME="tex2html664"
+  HREF="node43.html#SECTION0441010000000000000000">Analizador Léxico</A>
+<LI><A NAME="tex2html665"
   HREF="node43.html#SECTION0441011000000000000000">Exportación</A>
 </UL>
-<LI><A NAME="tex2html663"
-  HREF="node44.html">Precedencia y Asociatividad</A>
-<LI><A NAME="tex2html664"
-  HREF="node45.html">Esquemas de Traducción</A>
-<LI><A NAME="tex2html665"
-  HREF="node46.html">Manejo en <TT>jison</TT> de Atributos Heredados</A>
 <LI><A NAME="tex2html666"
-  HREF="node47.html">Definición Dirigida por la Sintáxis</A>
+  HREF="node44.html">Precedencia y Asociatividad</A>
 <LI><A NAME="tex2html667"
+  HREF="node45.html">Esquemas de Traducción</A>
+<LI><A NAME="tex2html668"
+  HREF="node46.html">Manejo en <TT>jison</TT> de Atributos Heredados</A>
+<LI><A NAME="tex2html669"
+  HREF="node47.html">Definición Dirigida por la Sintáxis</A>
+<LI><A NAME="tex2html670"
   HREF="node48.html">Ejercicios: Casos de Estudio</A>
 <UL>
-<LI><A NAME="tex2html668"
-  HREF="node48.html#SECTION044151000000000000000">Un mal diseño</A>
-<LI><A NAME="tex2html669"
-  HREF="node48.html#SECTION044152000000000000000">Gramática no LR(1)</A>
-<LI><A NAME="tex2html670"
-  HREF="node48.html#SECTION044153000000000000000">Un Lenguaje Intrínsecamente Ambiguo</A>
 <LI><A NAME="tex2html671"
+  HREF="node48.html#SECTION044151000000000000000">Un mal diseño</A>
+<LI><A NAME="tex2html672"
+  HREF="node48.html#SECTION044152000000000000000">Gramática no LR(1)</A>
+<LI><A NAME="tex2html673"
+  HREF="node48.html#SECTION044153000000000000000">Un Lenguaje Intrínsecamente Ambiguo</A>
+<LI><A NAME="tex2html674"
   HREF="node48.html#SECTION044154000000000000000">Conflicto reduce-reduce</A>
 </UL>
-<LI><A NAME="tex2html672"
-  HREF="node49.html">Recuperación de Errores</A>
-<LI><A NAME="tex2html673"
-  HREF="node50.html">Depuración en <TT>jison</TT></A>
-<LI><A NAME="tex2html674"
-  HREF="node51.html">Construcción del Árbol Sintáctico</A>
 <LI><A NAME="tex2html675"
+  HREF="node49.html">Recuperación de Errores</A>
+<LI><A NAME="tex2html676"
+  HREF="node50.html">Depuración en <TT>jison</TT></A>
+<LI><A NAME="tex2html677"
+  HREF="node51.html">Construcción del Árbol Sintáctico</A>
+<LI><A NAME="tex2html678"
   HREF="node52.html">Consejos a seguir al escribir un programa <TT>jison</TT></A>
 </UL>
 <BR>
-<LI><A NAME="tex2html676"
+<LI><A NAME="tex2html679"
   HREF="node53.html">Análisis Sintáctico Ascendente en Ruby</A>
 <UL>
-<LI><A NAME="tex2html677"
+<LI><A NAME="tex2html680"
   HREF="node54.html">La Calculadora</A>
 <UL>
-<LI><A NAME="tex2html678"
+<LI><A NAME="tex2html681"
   HREF="node54.html#SECTION04511000000000000000">Uso desde Línea de Comandos</A>
-<LI><A NAME="tex2html679"
+<LI><A NAME="tex2html682"
   HREF="node54.html#SECTION04512000000000000000">Análisis Léxico con <TT>rexical</TT></A>
-<LI><A NAME="tex2html680"
+<LI><A NAME="tex2html683"
   HREF="node54.html#SECTION04513000000000000000">Análisis Sintáctico</A>
 </UL>
-<LI><A NAME="tex2html681"
+<LI><A NAME="tex2html684"
   HREF="node55.html">Véase También</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html600"
+<A NAME="tex2html602"
   HREF="node7.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html594"
+<A NAME="tex2html596"
   HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html588"
+<A NAME="tex2html590"
   HREF="node5.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html596"
+<A NAME="tex2html598"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html598"
+<A NAME="tex2html600"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -384,11 +388,11 @@ Ejecución de las Acciones Semánticas</A>
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html601"
+<B> Sig:</B> <A NAME="tex2html603"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B>Sup:</B> <A NAME="tex2html595"
+<B>Sup:</B> <A NAME="tex2html597"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
-<B> Ant:</B> <A NAME="tex2html589"
+<B> Ant:</B> <A NAME="tex2html591"
   HREF="node5.html">Agradecimientos/Acknowledgments</A>
 </DIV>
 <!--End of Navigation Panel-->
