--- a/javascriptexamples.html
+++ b/javascriptexamples.html
@@ -172,259 +172,263 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="node21.html">Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <UL>
 <LI><A NAME="tex2html296"
-  HREF="node22.html">Referencias y Documentación</A>
+  HREF="node22.html">Instroducción</A>
+<UL>
 <LI><A NAME="tex2html297"
+  HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
+</UL>
+<LI><A NAME="tex2html298"
   HREF="node23.html">Un Ejemplo Sencillo</A>
 <UL>
-<LI><A NAME="tex2html298"
+<LI><A NAME="tex2html299"
   HREF="node23.html#SECTION04321000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
-<LI><A NAME="tex2html299"
+<LI><A NAME="tex2html300"
   HREF="node24.html">Eliminación de la Recursividad por la Izquierda</A>
 <UL>
-<LI><A NAME="tex2html300"
+<LI><A NAME="tex2html301"
   HREF="node24.html#SECTION04331000000000000000">Eliminación de la Recursividad por la izquierda Respetando el Orden de 
 Ejecución de las Acciones Semánticas</A>
-<LI><A NAME="tex2html301"
+<LI><A NAME="tex2html302"
   HREF="node24.html#SECTION04332000000000000000">Eliminando la Recursividad por la Izquierda en la Calculadora</A>
 </UL>
-<LI><A NAME="tex2html302"
+<LI><A NAME="tex2html303"
   HREF="node25.html">Eliminación de la Recursividad por la Izquierda y Atributos Heredados</A>
 <UL>
-<LI><A NAME="tex2html303"
-  HREF="node25.html#SECTION04341000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
 <LI><A NAME="tex2html304"
-  HREF="node25.html#SECTION04342000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+  HREF="node25.html#SECTION04341000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
 <LI><A NAME="tex2html305"
+  HREF="node25.html#SECTION04342000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+<LI><A NAME="tex2html306"
   HREF="node25.html#SECTION04343000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
-<LI><A NAME="tex2html306"
-  HREF="node26.html">Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html307"
-  HREF="node27.html">Comentarios Anidados</A>
+  HREF="node26.html">Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html308"
-  HREF="node28.html">Un Lenguaje Dependiente del Contexto</A>
+  HREF="node27.html">Comentarios Anidados</A>
 <LI><A NAME="tex2html309"
-  HREF="node29.html">PegJS en los Browser</A>
+  HREF="node28.html">Un Lenguaje Dependiente del Contexto</A>
 <LI><A NAME="tex2html310"
-  HREF="node30.html">Usando Pegjs con CoffeeScript</A>
+  HREF="node29.html">PegJS en los Browser</A>
 <LI><A NAME="tex2html311"
-  HREF="node31.html">Práctica: Ambiguedad en C++</A>
+  HREF="node30.html">Usando Pegjs con CoffeeScript</A>
 <LI><A NAME="tex2html312"
+  HREF="node31.html">Práctica: Ambiguedad en C++</A>
+<LI><A NAME="tex2html313"
   HREF="node32.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 </UL>
-<LI><A NAME="tex2html313"
+<LI><A NAME="tex2html314"
   HREF="node33.html">Análisis Sintáctico Ascendente en JavaScript</A>
 <UL>
-<LI><A NAME="tex2html314"
+<LI><A NAME="tex2html315"
   HREF="node34.html">Conceptos Básicos para el Análisis Sintáctico</A>
 <UL>
-<LI><A NAME="tex2html315"
+<LI><A NAME="tex2html316"
   HREF="node34.html#SECTION04411000000000000000">Ejercicio</A>
 </UL>
-<LI><A NAME="tex2html316"
+<LI><A NAME="tex2html317"
   HREF="node35.html">Ejemplo Simple en Jison</A>
 <UL>
-<LI><A NAME="tex2html317"
-  HREF="node35.html#SECTION04421000000000000000">Véase También</A>
 <LI><A NAME="tex2html318"
+  HREF="node35.html#SECTION04421000000000000000">Véase También</A>
+<LI><A NAME="tex2html319"
   HREF="node35.html#SECTION04422000000000000000">Práctica: Secuencia de Asignaciones Simples</A>
 </UL>
-<LI><A NAME="tex2html319"
+<LI><A NAME="tex2html320"
   HREF="node36.html">Ejemplo en Jison: Calculadora Simple</A>
 <UL>
-<LI><A NAME="tex2html320"
+<LI><A NAME="tex2html321"
   HREF="node36.html#SECTION04431000000000000000">Práctica: Calculadora con Listas de Expresiones y Variables</A>
 </UL>
-<LI><A NAME="tex2html321"
-  HREF="node37.html">Conceptos Básicos del Análisis LR</A>
 <LI><A NAME="tex2html322"
+  HREF="node37.html">Conceptos Básicos del Análisis LR</A>
+<LI><A NAME="tex2html323"
   HREF="node38.html">Construcción de las Tablas para el Análisis SLR</A>
 <UL>
-<LI><A NAME="tex2html323"
-  HREF="node38.html#SECTION04451000000000000000">Los conjuntos de Primeros y Siguientes</A>
 <LI><A NAME="tex2html324"
+  HREF="node38.html#SECTION04451000000000000000">Los conjuntos de Primeros y Siguientes</A>
+<LI><A NAME="tex2html325"
   HREF="node38.html#SECTION04452000000000000000">Construcción de las Tablas</A>
 </UL>
-<LI><A NAME="tex2html325"
-  HREF="node39.html">Práctica: Traducción de Infijo a Postfijo</A>
 <LI><A NAME="tex2html326"
-  HREF="node40.html">Práctica: Calculadora  con Funciones</A>
+  HREF="node39.html">Práctica: Traducción de Infijo a Postfijo</A>
 <LI><A NAME="tex2html327"
-  HREF="node41.html">Práctica: Calculadora con Análisis de Ámbito</A>
+  HREF="node40.html">Práctica: Calculadora  con Funciones</A>
 <LI><A NAME="tex2html328"
-  HREF="node42.html">Algoritmo de Análisis LR</A>
+  HREF="node41.html">Práctica: Calculadora con Análisis de Ámbito</A>
 <LI><A NAME="tex2html329"
+  HREF="node42.html">Algoritmo de Análisis LR</A>
+<LI><A NAME="tex2html330"
   HREF="node43.html">El módulo Generado por <TT>jison</TT></A>
 <UL>
-<LI><A NAME="tex2html330"
-  HREF="node43.html#SECTION044101000000000000000">Version</A>
 <LI><A NAME="tex2html331"
-  HREF="node43.html#SECTION044102000000000000000">Gramática Inicial</A>
+  HREF="node43.html#SECTION044101000000000000000">Version</A>
 <LI><A NAME="tex2html332"
-  HREF="node43.html#SECTION044103000000000000000">Tablas</A>
+  HREF="node43.html#SECTION044102000000000000000">Gramática Inicial</A>
 <LI><A NAME="tex2html333"
-  HREF="node43.html#SECTION044104000000000000000">Acciones Semánticas</A>
+  HREF="node43.html#SECTION044103000000000000000">Tablas</A>
 <LI><A NAME="tex2html334"
-  HREF="node43.html#SECTION044105000000000000000">Tabla de Acciones y GOTOs</A>
+  HREF="node43.html#SECTION044104000000000000000">Acciones Semánticas</A>
 <LI><A NAME="tex2html335"
-  HREF="node43.html#SECTION044106000000000000000">defaultActions</A>
+  HREF="node43.html#SECTION044105000000000000000">Tabla de Acciones y GOTOs</A>
 <LI><A NAME="tex2html336"
-  HREF="node43.html#SECTION044107000000000000000">Reducciones</A>
+  HREF="node43.html#SECTION044106000000000000000">defaultActions</A>
 <LI><A NAME="tex2html337"
-  HREF="node43.html#SECTION044108000000000000000">Desplazamientos/Shifts</A>
+  HREF="node43.html#SECTION044107000000000000000">Reducciones</A>
 <LI><A NAME="tex2html338"
-  HREF="node43.html#SECTION044109000000000000000">Manejo de Errores</A>
+  HREF="node43.html#SECTION044108000000000000000">Desplazamientos/Shifts</A>
 <LI><A NAME="tex2html339"
-  HREF="node43.html#SECTION0441010000000000000000">Analizador Léxico</A>
+  HREF="node43.html#SECTION044109000000000000000">Manejo de Errores</A>
 <LI><A NAME="tex2html340"
+  HREF="node43.html#SECTION0441010000000000000000">Analizador Léxico</A>
+<LI><A NAME="tex2html341"
   HREF="node43.html#SECTION0441011000000000000000">Exportación</A>
 </UL>
-<LI><A NAME="tex2html341"
-  HREF="node44.html">Precedencia y Asociatividad</A>
 <LI><A NAME="tex2html342"
-  HREF="node45.html">Esquemas de Traducción</A>
+  HREF="node44.html">Precedencia y Asociatividad</A>
 <LI><A NAME="tex2html343"
-  HREF="node46.html">Manejo en <TT>jison</TT> de Atributos Heredados</A>
+  HREF="node45.html">Esquemas de Traducción</A>
 <LI><A NAME="tex2html344"
-  HREF="node47.html">Definición Dirigida por la Sintáxis</A>
+  HREF="node46.html">Manejo en <TT>jison</TT> de Atributos Heredados</A>
 <LI><A NAME="tex2html345"
+  HREF="node47.html">Definición Dirigida por la Sintáxis</A>
+<LI><A NAME="tex2html346"
   HREF="node48.html">Ejercicios: Casos de Estudio</A>
 <UL>
-<LI><A NAME="tex2html346"
-  HREF="node48.html#SECTION044151000000000000000">Un mal diseño</A>
 <LI><A NAME="tex2html347"
-  HREF="node48.html#SECTION044152000000000000000">Gramática no LR(1)</A>
+  HREF="node48.html#SECTION044151000000000000000">Un mal diseño</A>
 <LI><A NAME="tex2html348"
-  HREF="node48.html#SECTION044153000000000000000">Un Lenguaje Intrínsecamente Ambiguo</A>
+  HREF="node48.html#SECTION044152000000000000000">Gramática no LR(1)</A>
 <LI><A NAME="tex2html349"
+  HREF="node48.html#SECTION044153000000000000000">Un Lenguaje Intrínsecamente Ambiguo</A>
+<LI><A NAME="tex2html350"
   HREF="node48.html#SECTION044154000000000000000">Conflicto reduce-reduce</A>
 </UL>
-<LI><A NAME="tex2html350"
-  HREF="node49.html">Recuperación de Errores</A>
 <LI><A NAME="tex2html351"
-  HREF="node50.html">Depuración en <TT>jison</TT></A>
+  HREF="node49.html">Recuperación de Errores</A>
 <LI><A NAME="tex2html352"
-  HREF="node51.html">Construcción del Árbol Sintáctico</A>
+  HREF="node50.html">Depuración en <TT>jison</TT></A>
 <LI><A NAME="tex2html353"
+  HREF="node51.html">Construcción del Árbol Sintáctico</A>
+<LI><A NAME="tex2html354"
   HREF="node52.html">Consejos a seguir al escribir un programa <TT>jison</TT></A>
 </UL>
-<LI><A NAME="tex2html354"
+<LI><A NAME="tex2html355"
   HREF="node53.html">Análisis Sintáctico Ascendente en Ruby</A>
 <UL>
-<LI><A NAME="tex2html355"
+<LI><A NAME="tex2html356"
   HREF="node54.html">La Calculadora</A>
 <UL>
-<LI><A NAME="tex2html356"
-  HREF="node54.html#SECTION04511000000000000000">Uso desde Línea de Comandos</A>
 <LI><A NAME="tex2html357"
-  HREF="node54.html#SECTION04512000000000000000">Análisis Léxico con <TT>rexical</TT></A>
+  HREF="node54.html#SECTION04511000000000000000">Uso desde Línea de Comandos</A>
 <LI><A NAME="tex2html358"
+  HREF="node54.html#SECTION04512000000000000000">Análisis Léxico con <TT>rexical</TT></A>
+<LI><A NAME="tex2html359"
   HREF="node54.html#SECTION04513000000000000000">Análisis Sintáctico</A>
 </UL>
-<LI><A NAME="tex2html359"
+<LI><A NAME="tex2html360"
   HREF="node55.html">Véase También</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html360"
+<LI><A NAME="tex2html361"
   HREF="node56.html">PARTE: CREATE YOUR OWN PROGRAMMING LANGUAGE</A>
 <UL>
-<LI><A NAME="tex2html361"
+<LI><A NAME="tex2html362"
   HREF="node57.html">JavaScript Review </A>
 <UL>
-<LI><A NAME="tex2html362"
+<LI><A NAME="tex2html363"
   HREF="node58.html">Closures</A>
 </UL>
-<LI><A NAME="tex2html363"
-  HREF="node59.html">Your First Compiler </A>
 <LI><A NAME="tex2html364"
-  HREF="node60.html">Parsing</A>
+  HREF="node59.html">Your First Compiler </A>
 <LI><A NAME="tex2html365"
+  HREF="node60.html">Parsing</A>
+<LI><A NAME="tex2html366"
   HREF="node61.html">Scheem Interpreter</A>
 <UL>
-<LI><A NAME="tex2html366"
-  HREF="node62.html">Scheem Interpreter</A>
 <LI><A NAME="tex2html367"
-  HREF="node63.html">Variables</A>
+  HREF="node62.html">Scheem Interpreter</A>
 <LI><A NAME="tex2html368"
-  HREF="node64.html">Setting Values</A>
+  HREF="node63.html">Variables</A>
 <LI><A NAME="tex2html369"
+  HREF="node64.html">Setting Values</A>
+<LI><A NAME="tex2html370"
   HREF="node65.html">Putting Things Together</A>
 <UL>
-<LI><A NAME="tex2html370"
-  HREF="node65.html#SECTION05441000000000000000">Unit Testing: Mocha</A>
 <LI><A NAME="tex2html371"
-  HREF="node65.html#SECTION05442000000000000000">Karma</A>
+  HREF="node65.html#SECTION05441000000000000000">Unit Testing: Mocha</A>
 <LI><A NAME="tex2html372"
-  HREF="node65.html#SECTION05443000000000000000">Grunt</A>
+  HREF="node65.html#SECTION05442000000000000000">Karma</A>
 <LI><A NAME="tex2html373"
+  HREF="node65.html#SECTION05443000000000000000">Grunt</A>
+<LI><A NAME="tex2html374"
   HREF="node65.html#SECTION05444000000000000000">GitHub Project Pages</A>
 </UL>
 </UL>
-<LI><A NAME="tex2html374"
-  HREF="node66.html">Functions and all that</A>
 <LI><A NAME="tex2html375"
+  HREF="node66.html">Functions and all that</A>
+<LI><A NAME="tex2html376"
   HREF="node67.html">Inventing a language for turtle graphics</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html376"
+<LI><A NAME="tex2html377"
   HREF="node68.html">HERRAMIENTAS</A>
 <UL>
-<LI><A NAME="tex2html377"
+<LI><A NAME="tex2html378"
   HREF="node69.html">Heroku</A>
 <UL>
-<LI><A NAME="tex2html378"
-  HREF="node70.html">Introducción</A>
 <LI><A NAME="tex2html379"
-  HREF="node71.html">Logging</A>
+  HREF="node70.html">Introducción</A>
 <LI><A NAME="tex2html380"
-  HREF="node72.html">Troubleshooting</A>
+  HREF="node71.html">Logging</A>
 <LI><A NAME="tex2html381"
-  HREF="node73.html">Configuration</A>
+  HREF="node72.html">Troubleshooting</A>
 <LI><A NAME="tex2html382"
-  HREF="node74.html">Make Heroku run non-master Git branch</A>
+  HREF="node73.html">Configuration</A>
 <LI><A NAME="tex2html383"
-  HREF="node75.html">Account Verification and add-ons</A>
+  HREF="node74.html">Make Heroku run non-master Git branch</A>
 <LI><A NAME="tex2html384"
+  HREF="node75.html">Account Verification and add-ons</A>
+<LI><A NAME="tex2html385"
   HREF="node76.html">Véase</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html385"
+<LI><A NAME="tex2html386"
   HREF="node77.html">PARTE: BITÁCORA DEL CURSO</A>
 <UL>
-<LI><A NAME="tex2html386"
+<LI><A NAME="tex2html387"
   HREF="node78.html">2014</A>
 <UL>
-<LI><A NAME="tex2html387"
+<LI><A NAME="tex2html388"
   HREF="node79.html">01</A>
 <UL>
-<LI><A NAME="tex2html388"
+<LI><A NAME="tex2html389"
   HREF="node79.html#SECTION07111000000000000000">Semana del 27/01/14 al 01/02/2014</A>
 </UL>
-<LI><A NAME="tex2html389"
+<LI><A NAME="tex2html390"
   HREF="node80.html">02</A>
 <UL>
-<LI><A NAME="tex2html390"
-  HREF="node80.html#SECTION07121000000000000000">Semana del 4/02/14 al 7/02/2014</A>
 <LI><A NAME="tex2html391"
+  HREF="node80.html#SECTION07121000000000000000">Semana del 4/02/14 al 7/02/2014</A>
+<LI><A NAME="tex2html392"
   HREF="node80.html#SECTION07122000000000000000">Semana del 24/02/14 al 02/03/14. Repaso para el micro-examen del 05/03/14</A>
 </UL>
-<LI><A NAME="tex2html392"
+<LI><A NAME="tex2html393"
   HREF="node81.html">Proyecto: Diseña e Implementa un Lenguaje de Dominio Específico</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html393"
-  HREF="node82.html">&#205;ndice General</A>
 <LI><A NAME="tex2html394"
-  HREF="node83.html">&#205;ndice de Figuras</A>
+  HREF="node82.html">&#205;ndice General</A>
 <LI><A NAME="tex2html395"
-  HREF="node84.html">&#205;ndice de Tablas</A>
+  HREF="node83.html">&#205;ndice de Figuras</A>
 <LI><A NAME="tex2html396"
-  HREF="node85.html">&#205;ndice de Materias</A>
+  HREF="node84.html">&#205;ndice de Tablas</A>
 <LI><A NAME="tex2html397"
+  HREF="node85.html">&#205;ndice de Materias</A>
+<LI><A NAME="tex2html398"
   HREF="node86.html">Bibliograf&#237;a</A>
 </UL>
 <!--End of Table of Child-Links-->
