--- a/node23.html
+++ b/node23.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1048"
+<A NAME="tex2html1053"
   HREF="node24.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1042"
+<A NAME="tex2html1047"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1036"
+<A NAME="tex2html1041"
   HREF="node22.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1044"
+<A NAME="tex2html1049"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1046"
+<A NAME="tex2html1051"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1049"
+<B> Sig:</B> <A NAME="tex2html1054"
   HREF="node24.html">Eliminación de la Recursividad</A>
-<B>Sup:</B> <A NAME="tex2html1043"
+<B>Sup:</B> <A NAME="tex2html1048"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1037"
-  HREF="node22.html">Referencias y Documentación</A>
+<B> Ant:</B> <A NAME="tex2html1042"
+  HREF="node22.html">Instroducción</A>
 <B> Con:</B> 
-<A NAME="tex2html1044"
+<A NAME="tex2html1049"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1046"
+<A NAME="tex2html1051"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,20 +115,20 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1050"
+<LI><A NAME="tex2html1055"
   HREF="node23.html#SECTION04320010000000000000">Donde</A>
-<LI><A NAME="tex2html1051"
+<LI><A NAME="tex2html1056"
   HREF="node23.html#SECTION04320020000000000000">arithmetics.pegjs</A>
-<LI><A NAME="tex2html1052"
+<LI><A NAME="tex2html1057"
   HREF="node23.html#SECTION04320030000000000000">main.js</A>
-<LI><A NAME="tex2html1053"
+<LI><A NAME="tex2html1058"
   HREF="node23.html#SECTION04320040000000000000">Rakefile</A>
-<LI><A NAME="tex2html1054"
+<LI><A NAME="tex2html1059"
   HREF="node23.html#SECTION04320050000000000000">Compilación</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html1055"
+<LI><A NAME="tex2html1060"
   HREF="node23.html#SECTION04321000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -266,7 +266,7 @@ Asociación Incorrecta para la Resta y la División</A>
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="3527"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="3530"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -287,7 +287,7 @@ una regla de producción de la forma <!-- MATH
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-Cuando la gramática es <A NAME="3529"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="3532"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
@@ -333,19 +333,19 @@ console.log(r);
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1048"
+<A NAME="tex2html1053"
   HREF="node24.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1042"
+<A NAME="tex2html1047"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1036"
+<A NAME="tex2html1041"
   HREF="node22.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1044"
+<A NAME="tex2html1049"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1046"
+<A NAME="tex2html1051"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -397,12 +397,12 @@ console.log(r);
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1049"
+<B> Sig:</B> <A NAME="tex2html1054"
   HREF="node24.html">Eliminación de la Recursividad</A>
-<B>Sup:</B> <A NAME="tex2html1043"
+<B>Sup:</B> <A NAME="tex2html1048"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1037"
-  HREF="node22.html">Referencias y Documentación</A>
+<B> Ant:</B> <A NAME="tex2html1042"
+  HREF="node22.html">Instroducción</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
